@@ -13,7 +13,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -50,7 +49,7 @@ public class AnnounceServiceImpl implements AnnounceService {
         List<Announce> announceList = announceRepository.findAll();
         return announceList.stream()
                 .map(ResponseAnnounceDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     //공지사항 상세 조회하기
